// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-banner> Component Basic usage 1`] = `
<bolt-banner>
  <replace-with-grandchildren>
    <div class="c-bolt-banner c-bolt-banner--status-information   c-bolt-banner--align-center c-bolt-banner--full">
      This is a banner
    </div>
  </replace-with-grandchildren>
</bolt-banner>
`;

exports[`<bolt-banner> Component Status of the banner message: error 1`] = `
<bolt-banner status="error">
  <replace-with-grandchildren>
    <div class="c-bolt-banner c-bolt-banner--status-error t-bolt-dark  c-bolt-banner--align-center c-bolt-banner--full">
      This banner is trying to convey error
    </div>
  </replace-with-grandchildren>
</bolt-banner>
`;

exports[`<bolt-banner> Component Status of the banner message: information 1`] = `
<bolt-banner status="information">
  <replace-with-grandchildren>
    <div class="c-bolt-banner c-bolt-banner--status-information   c-bolt-banner--align-center c-bolt-banner--full">
      This banner is trying to convey information
    </div>
  </replace-with-grandchildren>
</bolt-banner>
`;

exports[`<bolt-banner> Component Status of the banner message: success 1`] = `
<bolt-banner status="success">
  <replace-with-grandchildren>
    <div class="c-bolt-banner c-bolt-banner--status-success  t-bolt-dark c-bolt-banner--align-center c-bolt-banner--full">
      This banner is trying to convey success
    </div>
  </replace-with-grandchildren>
</bolt-banner>
`;

exports[`<bolt-banner> Component Status of the banner message: warning 1`] = `
<bolt-banner status="warning">
  <replace-with-grandchildren>
    <div class="c-bolt-banner c-bolt-banner--status-warning   c-bolt-banner--align-center c-bolt-banner--full">
      This banner is trying to convey warning
    </div>
  </replace-with-grandchildren>
</bolt-banner>
`;

exports[`<bolt-banner> Component Text alignment: center 1`] = `
<bolt-banner align="center">
  <replace-with-grandchildren>
    <div class="c-bolt-banner c-bolt-banner--status-information   c-bolt-banner--align-center c-bolt-banner--full">
      The text is aligned to the center
    </div>
  </replace-with-grandchildren>
</bolt-banner>
`;

exports[`<bolt-banner> Component Text alignment: end 1`] = `
<bolt-banner align="end">
  <replace-with-grandchildren>
    <div class="c-bolt-banner c-bolt-banner--status-information   c-bolt-banner--align-end c-bolt-banner--full">
      The text is aligned to the end
    </div>
  </replace-with-grandchildren>
</bolt-banner>
`;

exports[`<bolt-banner> Component Text alignment: start 1`] = `
<bolt-banner align="start">
  <replace-with-grandchildren>
    <div class="c-bolt-banner c-bolt-banner--status-information   c-bolt-banner--align-start c-bolt-banner--full">
      The text is aligned to the start
    </div>
  </replace-with-grandchildren>
</bolt-banner>
`;
